fixed vertical alignment in application download buttons

--- a/css/style.css
+++ b/css/style.css
@@ -99,6 +99,10 @@ button {
   .button-app--top {
     display: none; }
 
+.link-wrap {
+  display: flex;
+  flex-flow: column wrap; }
+
 .link-app {
   font-size: 14px;
   line-height: 16px;
